force-app/main/default/objects/Store_Detail__c/Store_Detail__c.object-meta.xml
<CustomObject>
    <label>Store Detail</label>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Store Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>