force-app/main/default/objects/Store_Detail__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>唯一校验 Sample Display + &apos;-&apos; + store</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>