force-app/main/default/objects/Store_Detail__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>