force-app/main/default/objects/Store_Detail__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Store Detail</relationshipLabel>
    <relationshipName>Store_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>