force-app/main/default/objects/Store_Detail__c/fields/Sample_Display__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display__c</fullName>
    <label>Sample Display</label>
    <referenceTo>Sample_Display__c</referenceTo>
    <relationshipLabel>Store Detail</relationshipLabel>
    <relationshipName>Store_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>