force-app/main/default/objects/Store_Detail__c/fields/Sample_Display_Path__c.field-meta.xml
<CustomField>
    <fullName>Sample_Display_Path__c</fullName>
    <formula>TEXT( Sample_Display__r.Path__c )</formula>
    <label>Sample Display Path</label>
    <type>Text</type>
</CustomField>