force-app/main/default/objects/Store_Detail__c/fields/Split_Number__c.field-meta.xml
<CustomField>
    <fullName>Split_Number__c</fullName>
    <description>拆分了的数量</description>
    <label>Split Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>