force-app/main/default/objects/Store_Detail__c/fields/Split_Up__c.field-meta.xml
<CustomField>
    <fullName>Split_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>拆分结束标记 true：拆分完</description>
    <label>Split Up</label>
    <type>Checkbox</type>
</CustomField>