force-app/main/default/objects/Store_Detail__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Store Detail</relationshipLabel>
    <relationshipName>Store_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>